--- a/src/app.css
+++ b/src/app.css
@@ -24,7 +24,7 @@ h1 {
 
 h2 {
 	color: #585e68;
-	font-size: small;
+	font-size: 0.9rem;
 }
 
 h3 {
@@ -36,7 +36,8 @@ h3 {
 
 h4 {
 	color: #b2b2b1;
-	font-size: 12px;
+	font-size: 0.75rem;
+	/* font-size: 12px; */
 	font-weight: lighter;
 	margin-top:0px;
 	padding-top:0px;
