--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f5f5f4; /* Set your desired background color here */
+  background-color: #F1EFE7; /* Set your desired background color here */
   margin: 0;
   padding: 0;
   font-family: Inter,ui-sans-serif,system-ui,sans-serif,"Apple Color Emoji","Segoe UI Emoji",Segoe UI Symbol,"Noto Color Emoji";
