--- a/src/project_page.css
+++ b/src/project_page.css
@@ -27,7 +27,16 @@ h2 {
 .content {
   margin-bottom: 0rem;
 }
-
+.dummy-button:focus-visible {
+  outline: none;
+}
+.dummy-button {
+  border: none;
+  background: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
 p {
   margin-top: 0rem;
   margin-bottom: 0.8rem;
@@ -74,7 +83,8 @@ a:hover {
 }
 
 img {
-  max-width: 100%;
+  max-height: 80vh;
+  max-width: 80vw;
   height: auto;
 }
 
